# bazel

./: #MODULE.bazel#  .bazelrc  .bazelversion  .classpath  .gitattributes  .gitignore  .project  .travis.yml  404.html  404.md  AGENTS.md  AUTHORS  BUILD  BUILD.glob  CHANGELOG.md  CNAME  CODEBASE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  FAQ.md  ISSUE_TEMPLATE.md  LICENSE  MODULE.bazel  MODULE.bazel.lock.dist  Makefile  OUTPUT_SUPPRESSION.md  PROMPT_INSTRUCTION.txt  README.md  README.md}{bot}{•°  README.txt  README.windows  SECURITY.md  TODO  WORKSPACE  WORKSPACE.bzlmod  _config.yml  base_workspace_test.sh  (+56 more)
docs/: BUILD  BUILD.bazel  FAQ.md  bazel-query-v2.html  bazel-user-manual.html  build-encyclopedia.html  build-ref.html  concepts.md  contributing.md  cookbook.md  cpp.md  docs.json  docs_style.css  external.md  faq.html  getting-started.md  governance.md  help.mdx  install.md  mobile-install.md  output_directories.md  query.html  roadmap.md  rules.md  skyframe.md  support.md  supported-rules.md  test-encyclopedia.html  windows.md
docs/about/: faq.mdx  intro.mdx  roadmap.mdx  vision.mdx  why.mdx
docs/advanced/performance/: build-performance-breakdown.mdx  build-performance-metrics.mdx  iteration-speed.mdx  json-trace-profile.mdx  memory.mdx
docs/basics/: artifact-based-builds.mdx  build-systems.mdx  dependencies.mdx  distributed-builds.mdx  hermeticity.mdx  index.mdx  task-based-builds.mdx
docs/be/: android.html  appengine.md  c-cpp.html  closure.md  common-definitions.html  d.md  docker.md  dotnet.md  extra-actions.html  functions.html  general.html  go.md  groovy.md  java.html  jsonnet.md  make-variables.html  objective-c.html  overview.html  pkg.md  predefined-python-variables.html  protocol-buffer.html  python.html  rust.md  sass.md  scala.md  shell.html  workspace.html
docs/blog/: index.md
docs/blog/_posts/: 2015-3-27-Hello-World.md
docs/brand/: index.mdx
docs/community/: experts.mdx  partners.mdx  recommended-rules.mdx  remote-execution-services.mdx  sig.mdx  users.mdx
docs/concepts/: build-files.mdx  build-ref.mdx  dependencies.mdx  labels.mdx  platforms.mdx  runfiles.mdx  visibility.mdx
docs/configure/: attributes.mdx  best-practices.mdx  coverage.mdx  integrate-cpp.mdx  windows.mdx
docs/contribute/: breaking-changes.mdx  codebase.mdx  design-documents.mdx  docs-contribution-workflow.mdx  docs-navigation.mdx  docs-style-guide.mdx  docs.mdx  index.mdx  maintainers-guide.mdx  naming.mdx  patch-acceptance.mdx  policy.mdx  release-notes.mdx  search.mdx  statemachine-guide.mdx  windows-chocolatey-maintenance.mdx  windows-scoop-maintenance.mdx
docs/docs/: android-build-performance.mdx  android-instrumentation-test.mdx  android-ndk.mdx  bazel-and-android.mdx  bazel-and-apple.mdx  bazel-and-cpp.mdx  bazel-and-java.mdx  bazel-and-javascript.mdx  cc-toolchain-config-reference.mdx  configurable-attributes.mdx  mobile-install.mdx  sandboxing.mdx  user-manual.mdx
docs/extending/: aspects.mdx  auto-exec-groups.mdx  concepts.mdx  config.mdx  depsets.mdx  exec-groups.mdx  legacy-macros.mdx  macros.mdx  platforms.mdx  rules.mdx  toolchains.mdx
docs/historical/: README  bazel-query-v2.html  bazel-user-manual.html  build-encyclopedia.html  build-ref.html
docs/install/: bazelisk.mdx  compile-source.mdx  completion.mdx  docker-container.mdx  ide.mdx  index.mdx  mise.mdx  os-x.mdx  suse.mdx  ubuntu.mdx  windows.mdx
docs/migrate/: index.mdx  maven.mdx  xcode.mdx
docs/query/: aquery.mdx  cquery.mdx  guide.mdx  language.mdx  quickstart.mdx
docs/reference/: command-line-reference.mdx  flag-cheatsheet.mdx  glossary.mdx  skyframe-debugging.mdx  skyframe.mdx  skyframe_debugging.mdx  test-encyclopedia.mdx
docs/release/: backward-compatibility.mdx  index.mdx  rolling.mdx  rule-compatibility.mdx
docs/remote/: bep-examples.mdx  bep-glossary.mdx  bep.mdx  cache-local.mdx  cache-remote.mdx  caching.mdx  ci.mdx  creating.mdx  dynamic.mdx  multiplex.mdx  output-directories.mdx  persistent.mdx  rbe.mdx  rules.mdx  sandbox.mdx  workspace.mdx
docs/rules/: bzl-style.mdx  challenges.mdx  deploying.mdx  faq.mdx  index.mdx  language.mdx  legacy-macro-tutorial.mdx  macro-tutorial.mdx  performance.mdx  rules-tutorial.mdx  testing.mdx  verbs-tutorial.mdx  windows.mdx
docs/rules/lib/: builtins.mdx  core.mdx  fragments.mdx  globals.mdx  overview.mdx  providers.mdx  toplevel.mdx
docs/run/: bazelrc.mdx  build.mdx  client-server.mdx  scripts.mdx
docs/skylark/: concepts.md  cookbook.md  index.md  library.html  macros.md  repository_rules.md  rules.md
docs/skylark/lib/: AndroidSkylarkApiProvider.html  AndroidSkylarkIdlInfo.html  ConfigurationTransition.html  DottedVersion.html  File.html  FileType.html  JavaAnnotationProcessing.html  JavaCompilationInfo.html  JavaOutput.html  JavaOutputJars.html  JavaSkylarkApiProvider.html  Label.html  Target.html  apple.html  attr.html  cmd_helper.html  command_helper.html  configuration.html  cpp.html  ctx.html  dict.html  exec_result.html  fragments.html  globals.html  java.html  jvm.html  list.html  native.html  path.html  platform.html  repository_ctx.html  repository_os.html  root.html  rule_attributes.html  runfiles.html  set.html  string.html  struct.html  tuple.html
docs/start/: android-app.mdx  cpp.mdx  go.mdx  java.mdx
docs/tutorial/: android-app.md  backend-server.md  environment.md  index.md  ios-app.md  review.md  workspace.md
docs/tutorials/: ccp-toolchain-config.mdx  cpp-dependency.mdx  cpp-labels.mdx  cpp-use-cases.mdx
docs/versions/: index.mdx
docs/versions/6.0.0/: help.mdx
docs/versions/6.1.0/: help.mdx
docs/versions/6.2.0/: help.mdx
docs/versions/6.3.0/: help.mdx
docs/versions/6.4.0/: help.mdx
docs/versions/6.5.0/: help.mdx
docs/versions/7.0.0/: help.mdx
docs/versions/7.1.0/: help.mdx
docs/versions/7.2.0/: help.mdx
docs/versions/7.3.0/: help.mdx
docs/versions/7.4.0/: help.mdx
docs/versions/7.5.0/: help.mdx
docs/versions/7.6.0/: help.mdx
site/en/: BUILD  BUILD.bazel  _book.yaml  _buttons.html  _index.yaml  _redirects.yaml  bazel.css  faq.md  help.md
(+12408 files in other folders)
